force-app/main/default/objects/Site_Survey_Question__c/Site_Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Site Survey Question</label>
    <nameField>
        <displayFormat>SQ-{0000000}</displayFormat>
        <label>Site Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>