force-app/main/default/objects/Site_Survey_Question__c/fields/Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Question</label>
    <referenceTo>Site_Survey_Question__c</referenceTo>
    <relationshipLabel>Site Survey Questions</relationshipLabel>
    <relationshipName>Site_Survey_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>