force-app/main/default/objects/Site_Survey_Question__c/fields/Exp_Parent_Ques_Response__c.field-meta.xml
<CustomField>
    <fullName>Exp_Parent_Ques_Response__c</fullName>
    <label>Expected Parent Question Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>