force-app/main/default/objects/Site_Survey_Question__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Survey Section Header</description>
    <inlineHelpText>Section Header</inlineHelpText>
    <label>Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>