force-app/main/default/objects/Site_Survey_Question__c/fields/is_active__c.field-meta.xml
<CustomField>
    <fullName>is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Question</label>
    <type>Checkbox</type>
</CustomField>