force-app/main/default/objects/Site_Survey_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>Survey Question</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>