force-app/main/default/objects/Site_Survey_Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dropdown</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>textbox</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <isActive>false</isActive>
                <label>checkbox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>