force-app/main/default/objects/Site_Survey_Question__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>