force-app/main/default/objects/Site_Survey_Question__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the work type that the question is associated to. (PVFSL-879)</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Site Survey Questions</relationshipLabel>
    <relationshipName>Site_Survey_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>