force-app/main/default/objects/Site_Survey_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Question__c</columns>
    <columns>Work_Type__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>Header__c</columns>
    <columns>Type__c</columns>
    <columns>Dependent_Question__c</columns>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>