force-app/main/default/objects/Site_Survey_Question__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>is_active__c</columns>
    <columns>Dependent_Question__c</columns>
    <columns>Is_Dependent_Question__c</columns>
    <columns>Order__c</columns>
    <columns>Type__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>Options__c</columns>
    <columns>Header__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>